feat: Finished landing page

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=   , initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Choice</title>
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
 </head>
+
 <body>
-    Ini di Develop di Komputer Raul
+  <!-- Vue App Root -->
+  <div id="app"></div>
+  
+  <script type="module" src="src/main.js"></script>
+  <!-- Vite or Vue CLI Injects Script Here -->
 </body>
+
 </html>
