feat: Added Authentication for login and logout

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- Vue App Root -->
-  <div id="app"></div>
+  <div id="app" class="h-full"></div>
   
   <script type="module" src="src/main.js"></script>
   <!-- Vite or Vue CLI Injects Script Here -->
